<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ece.course.eesm5060_assign1.MainActivity">

    <item android:id="@+id/chooseBigBird"
        android:title="@string/nameBigBird"
        android:orderInCategory="1"/>

    <item android:id="@+id/chooseCookieMonster"
        android:title="@string/nameCookieMonster"
        android:orderInCategory="2"/>

    <item android:id="@+id/chooseElmo"
        android:title="@string/nameElmo"
        android:orderInCategory="3"/>

    <item android:id="@+id/chooseGoldfish"
        android:title="@string/nameGoldfish"
        android:orderInCategory="4"/>

    <item android:id="@+id/chooseJulia"
        android:title="@string/nameJulia"
        android:orderInCategory="5"/>

    <item android:id="@+id/chooseMrNoodle"
        android:title="@string/nameMrNoodle"
        android:orderInCategory="6"/>

</menu>
